# cloudgrepper

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docs/superpowers/plans/: 2026-07-02-cloudgrepper.md  2026-07-03-release-automation.md
docs/superpowers/specs/: 2026-07-02-cloudgrepper-design.md  2026-07-03-release-automation-design.md
scripts/: bench.sh  compare_python.sh  gen_golden.py  real_cloud_diff.sh
scripts/oracle/: search.py
src/: cli.rs  decompress.rs  filters.rs  lib.rs  logparse.rs  main.rs  output.rs  pyjson.rs  runner.rs  search.rs  yara.rs
src/providers/: azure.rs  gcs.rs  mod.rs  s3.rs
tests/: cli_behavior.rs  emulator.rs  golden.rs
tests/data/: README.md
tests/golden/: cloudtrail_sig_hidden.txt  cloudtrail_sig_json.txt  cloudtrail_sig_line.txt  gz_first_match.txt  gz_first_match_json.txt  utf8_torture.txt  zip_first_match.txt
tests/support/: mod.rs
