[package]
name = "cloudgrepper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "grep for cloud storage (S3, Azure, GCS) — Rust port of cado-security/cloudgrep"

[lib]
name = "cloudgrepper"
path = "src/lib.rs"

[[bin]]
name = "cloudgrepper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
flate2 = "1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2"
